--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
   "homepage": "https://github.com/atom/electron-quick-start#readme",
   "devDependencies": {
     "electron-prebuilt": "^0.36.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.3.3",
+    "chokidar": "^1.4.3",
+    "mocha": "^2.4.5",
+    "ramda": "^0.19.1"
   }
 }
