--- a/app/package.json
+++ b/app/package.json
@@ -5,11 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "browserify browser.js -o static/bundle.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron-prebuilt": "^0.36.10"
+    "electron-prebuilt": "^0.36.10",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0-alpha.2",
+    "jquery": "^2.2.1",
+    "photon": "^2.0.0",
+    "tether": "^1.2.0"
   }
 }
