--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "rimraf": "^2.5.2"
   },
   "dependencies": {
+    "any-promise": "^1.1.0",
     "bluebird": "^3.3.3",
     "chokidar": "^1.4.3",
+    "mz": "^2.3.1",
     "node-uuid": "^1.4.7",
     "ramda": "^0.19.1"
   }
