--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
-  "plugins": [
-    "transform-es2015-modules-commonjs",
-    "transform-es2015-shorthand-properties"
-  ]
+				"plugins": [
+								"transform-es2015-modules-commonjs", "transform-es2015-shorthand-properties"
+				],
+				"presets": ["react"]
 }
