--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-uuid": "^1.4.7",
     "photon": "^2.0.0",
     "ramda": "^0.19.1",
+    "request-promise": "^2.0.1",
     "tether": "^1.2.0"
   }
 }
