--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bluebird": "^3.3.3",
     "bootstrap": "^3.3.6",
+    "bower": "^1.7.7",
     "chokidar": "^1.4.3",
     "jquery": "^2.2.1",
     "node-uuid": "^1.4.7",
