--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-				"plugins": [
-								"transform-es2015-modules-commonjs", "transform-es2015-shorthand-properties"
-				],
-				"presets": ["react"]
+  "plugins": [
+    "transform-es2015-modules-commonjs",
+    "transform-es2015-shorthand-properties"
+  ],
+  "presets": ["react"]
 }
