--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "request-promise": "^2.0.1",
+    "sweetalert": "^1.1.3",
+    "sweetalert2": "^0.4.3",
     "tether": "^1.2.0"
   }
 }
