--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-transform-es2015-destructuring": "^6.6.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
     "babel-plugin-transform-es2015-shorthand-properties": "^6.5.0",
+    "babel-polyfill": "^6.7.2",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "chai": "^3.5.0",
