--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "docker for development",
   "main": "main.js",
   "scripts": {
-    "start": "electron app/index.js",
+    "start": "electron app/main.js",
     "gulp": "gulp",
     "test": "mocha \"./test/tests-compiled.js\""
   },
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "electron-prebuilt": "^0.36.0",
     "gulp": "^3.9.1",
@@ -25,8 +26,11 @@
     "gulp-rename": "^1.2.2",
     "gulp-watch": "^4.3.5",
     "mocha": "^2.4.5",
+    "reactify": "^1.1.1",
     "rimraf": "^2.5.2",
-    "watch-babel": "^0.1.2"
+    "vinyl-source-stream": "^1.1.0",
+    "watch-babel": "^0.1.2",
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "bluebird": "^3.3.3",
@@ -39,6 +43,7 @@
     "ramda": "^0.19.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "remote": "^0.2.6",
     "request-promise": "^2.0.1",
     "sweetalert": "^1.1.3",
     "sweetalert2": "^0.4.3",
