--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "electron-prebuilt": "^0.36.0",
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-notify": "^2.2.0",
