--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bootstrap": "^3.3.6",
     "bower": "^1.7.7",
     "chokidar": "^1.4.3",
+    "gulp-cli": "^1.2.1",
     "jquery": "^2.2.1",
     "node-uuid": "^1.4.7",
     "photon": "^2.0.0",
@@ -51,6 +52,7 @@
     "request-promise": "^2.0.1",
     "sweetalert": "^1.1.3",
     "sweetalert2": "^0.4.3",
-    "tether": "^1.2.0"
+    "tether": "^1.2.0",
+    "watchify": "^3.7.0"
   }
 }
