--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-transform-es2015-block-scoping": "^6.7.1",
     "babel-plugin-transform-es2015-destructuring": "^6.6.5",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
+    "babel-plugin-transform-es2015-parameters": "^6.7.0",
     "babel-plugin-transform-es2015-shorthand-properties": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-react": "^4.2.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-cli": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-watch": "^4.3.5",
@@ -33,8 +35,7 @@
     "rimraf": "^2.5.2",
     "vinyl-source-stream": "^1.1.0",
     "watch-babel": "^0.1.2",
-    "watchify": "^3.7.0",
-    "gulp-cli": "^1.2.1"
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "bluebird": "^3.3.3",
