tested some ui options

--- a/package.json
+++ b/package.json
@@ -25,21 +25,23 @@
     "eslint-plugin-react": "^4.2.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-cli": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-watch": "^4.3.5",
     "mocha": "^2.4.5",
+    "react-hot-loader": "^1.3.0",
     "reactify": "^1.1.1",
     "rimraf": "^2.5.2",
     "vinyl-source-stream": "^1.1.0",
     "watch-babel": "^0.1.2",
-    "watchify": "^3.7.0",
-    "gulp-cli": "^1.2.1"
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "bluebird": "^3.3.3",
     "bootstrap": "^4.0.0-alpha.2",
     "chokidar": "^1.4.3",
+    "gulp": "^3.9.1",
     "jquery": "^2.2.1",
     "node-uuid": "^1.4.7",
     "ramda": "^0.19.1",
