--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "electron app/build/main.js",
     "gulp": "gulp",
-    "test": "mocha \"./test/tests-compiled.js\""
+    "test": "mocha \"./test/tests-compiled.js\"",
+    "build:mac": "electron . DockDev --platform=darwin --arch=x64 --version=0.36.0"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
@@ -20,6 +21,7 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
+    "electron-packager": "^5.2.1",
     "electron-prebuilt": "^0.36.0",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
