--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
   },
   "dependencies": {
     "bluebird": "^3.3.3",
-    "bootstrap": "^4.0.0-alpha.2",
     "chokidar": "^1.4.3",
     "gulp": "^3.9.1",
     "jquery": "^2.2.1",
@@ -51,7 +50,6 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
-    "request-promise": "^2.0.1",
-    "tether": "^1.2.0"
+    "request-promise": "^2.0.1"
   }
 }
