--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "bootstrap": "v4.0.0-alpha.2",
-    "tether": "~1.2.0"
+    "tether": "~1.2.0",
+    "react-bootstrap": "^0.28.4"
   }
 }
