--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp": "^3.9.1",
     "install": "^0.6.1",
     "jquery": "^2.2.1",
+    "moment": "^2.12.0",
     "node-uuid": "^1.4.7",
     "ramda": "^0.19.1",
     "react": "^0.14.7",
