--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ node_modules
 .DS_Store
 /app/build
 /test/userFolder
-/test/tests-compiled.js
+/test/example-deploy/push/node_modules
+/test/example-deploy/deploy/node_modules
 bower_components
