--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "electron app/build/main.js",
     "gulp": "gulp",
-    "test": "mocha \"./test/tests-compiled.js\"",
-    "build:mac": "electron . DockDev --platform=darwin --arch=x64 --version=0.36.0"
+    "test": "mocha --compilers js:babel-core/register 'test/**/*.@(js|jsx)'",
+    "build:mac": "electron . DockDev --platform=darwin --arch=x64 --version=0.36.0",
+    "bower": "bower install"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
@@ -19,6 +20,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
+    "bower": "^1.7.7",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "electron-packager": "^5.2.1",
