--- a/package.json
+++ b/package.json
@@ -56,7 +56,12 @@
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.4",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.1",
+    "redux": "^3.3.1",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1",
     "request-promise": "^2.0.1"
   }
 }
