--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron app/build/main.js",
     "gulp": "gulp",
     "test": "mocha --compilers js:babel-core/register 'test/**/*.@(js|jsx)'",
-    "build:mac": "electron . DockDev --platform=darwin --arch=x64 --version=0.36.0",
+    "build:mac": "electron-packager . DockDev --platform=darwin --arch=x64 --version=0.36.0",
     "bower": "bower install"
   },
   "devDependencies": {
@@ -44,18 +44,12 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
-    "@terebentina/react-popover": "^1.0.4",
     "bluebird": "^3.3.3",
     "chokidar": "^1.4.3",
-    "classnames": "^2.2.3",
-    "gulp": "^3.9.1",
-    "install": "^0.6.1",
-    "jquery": "^2.2.1",
     "moment": "^2.12.0",
     "node-uuid": "^1.4.7",
     "ramda": "^0.19.1",
     "react": "^0.14.7",
-    "react-bootstrap": "^0.28.4",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
